ensure anchor links arent hidden behind floating nav bar

--- a/django/core/static/css/custom.css
+++ b/django/core/static/css/custom.css
@@ -171,7 +171,7 @@ i.icon {
 }
 
 .video-container {
-   margin: 1em auto;
+   margin: 0.5em auto;
    text-align: center;
 }
 
